@@ -18,7 +18,19 @@ module ActiveHash
         end
 
       end
-    end
 
+      def belongs_to(association_id, options = {})
+
+        define_method(association_id) do
+          options = {
+            :class_name => association_id.to_s.classify,
+            :foreign_key => association_id.to_s.foreign_key
+          }.merge(options)
+
+          options[:class_name].constantize.find(send(options[:foreign_key]))
+        end
+
+      end
+    end
   end
 end
